tests/macros/checkbox/extension.rs
fn main() {
    let q = discourse::questions![Checkbox { extension: todo!() }];
}
